# nclock

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md  TODO.md  nclock
.cache/clangd/index/: clock.hpp.6754D5D5AD1BF161.idx  font.cc.E27DF80028C79EF3.idx
.github/workflows/: c-cpp.yml
LICENSES/: LICENSE.NCLK
include/: clock.hpp  efont.hpp  libfiglet.hpp  timeutils.hpp
include/libfiglet/: abstract.hpp  constants.hpp  driver.hpp  fonts.hpp  styles.hpp  types.hpp  utilities.hpp
src/: clock.cc  font.cc  helper_uis.cc  helper_uis.cpp  helpers.cc  init.cc  keybindwin.cc  main.cc  mainwin.cc  standard_flf.cc  stopwatch.cc  timer.cc  tz.cc
tools/: format_offset.py
